# psi-agent

./: .gitignore  AGENTS.md  AGENT_BOOTSTRAP.md  LICENSE.md  README.md  README_en.md  WORKTREE.md  bootstrap.ps1  bootstrap.sh  check_pypi.py  config.yml  flake.nix  get_versions.py  install.ps1  install.sh  psi-agent.spec  pyproject.toml  todo.md  国内通道接入调研.html  真实通道闭环测试结果.html  通道接入与真实账号测试说明.html
.github/: CODEOWNERS  dependabot.yml
.github/electron/: generate-icon.py
.github/inno-setup/: .gitignore  haitun.c  haitun.iss  haitun.rc
.github/workflows/: auto-alpha-tag.yml  ci.yml  electron-desktop.yml  nuitka.yml  pyinstaller.yml
desktop/: main.js  package.json
docs/: browser-tools-plan.md  electron-desktop-packaging.md  windows-integrated-packaging.md
docs/superpowers/: router-implementation.md
docs/superpowers/plans/: 2026-05-20-psi-agent-implementation.md  2026-06-22-weixin-inbound-file-download.md  2026-06-24-session-history-persistence.md  2026-06-25-channel-core-refactor.md  2026-06-25-feishu-channel.md  2026-06-25-fusion-guard-dolphin-adaptation.md  2026-06-26-gateway.md  2026-06-26-spa-refactor.md  2026-06-26-workspace-optional-default-cwd.md  2026-06-28-channel-reasoning-chunk.md  2026-06-28-session-protocol-separation.md  2026-06-29-pystray-tray.md  2026-06-30-bundle-msys2.md  2026-06-30-haitun-inno-setup.md  2026-07-02-haitun-send-files.md  2026-07-03-gateway-state-persistence.md  2026-07-04-electron-gateway-desktop.md  2026-07-04-neural-expressive-skin.md  2026-07-06-gateway-webview.md  2026-07-06-haitun-tool-exposure-fix.md  2026-07-06-sidebar-gemini-sticky-header.md  2026-07-07-web-search-recency-enhance.md  2026-07-10-feishu-tools.md  2026-07-13-spike-skill.md  2026-07-14-feishu-attendance.md  2026-07-14-feishu-bitable-mentor-feedback.md  2026-07-14-feishu-calendar.md  2026-07-14-feishu-doc-search-authcode-fix.md  2026-07-14-feishu-doc-search.md  2026-07-14-feishu-tasks.md  (+21 more)
examples/a-simple-windows-workspace/: config.yml
examples/fusion-flow/: README.md
examples/fusion-flow-workspace/: .gitignore  AGENTS.md  README.md  memory.md
examples/fusion-memory-workspace/: .gitignore  README.md
examples/haitun/: .gitignore  AGENTS.md  README.md
examples/haitun-workspace/: .env.example  .env.multimodal.example  .env.xfyun.example  .gitignore  AGENTS.md  BOOTSTRAP.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  USER.md  demo_adaptive_profile.py  feishu-test.yml  haitun agent.vbs  haitun.iss  subagent-bug-report.md
examples/hermes-skills-workspace/: README.md
examples/openclaw-style/: BOOTSTRAP.md
examples/openclaw-style-workspace/: .flows_prompt_snapshot.json  .skills_prompt_snapshot.json  AGENTS.md  IDENTITY.md  USER.md  comprehensive-comparison-report.md  memory.md  package.json  research_report_agent_frameworks.md  research_report_ai_frameworks_6.md  research_report_air_quality_improvement.md  research_report_asyncio_vs_uvloop.md  research_report_cloud_pricing.md  research_report_container_security.md  research_report_db_write_performance.md  research_report_dl_frameworks.md  research_report_frontend_frameworks.md  research_report_llm_benchmark.md  research_report_memory_safety.md  research_report_orchestration_platforms.md  research_report_python_libraries_star_trends.md  stackoverflow_2024_salary_by_language.md
examples/tb2-specific/: README.md
packaging/windows/: build-electron-installer.ps1  build-haitun-integrated.ps1  haitun-agent.vbs  haitun-installer.iss  prepare-electron-resources.ps1
psi_agent/: cli.py  protocol.py
psi_agent/session/: __init__.py  agent.py  scheduler.py  server.py  tools.py
src/psi_agent/: __init__.py  _app_paths.py  _history_meta.py  _keys.py  _logging.py  _protocol.py  _run.py  _socket.py  _sockets.py  _yaml.py  call.py  cli.py  doctor.py  errors.py  init.py  logging.py  net.py  protocol.py  setup.py  workspace.py
test-data/: check_fusion_haven_workspace.py
tests/: conftest.py  test_ci_workflows.py
tests/integration/: conftest.py  test_after_turn_flow_review.py  test_ai_error_handling.py  test_bash_tool.py  test_channel_error.py  test_channel_repl_cli.py  test_channel_web.py  test_end_to_end.py  test_example_workspaces.py  test_fusion_flow_workspace_run.py  test_fusion_guard_secure_bash.py  test_fusion_memory_auto_persist.py  test_fusion_memory_prompt.py  test_fusion_memory_setup_skill.py  test_gateway.py  test_gateway_persistence.py  test_haitun_memory_workspace.py  test_haitun_profile.py  test_hermes_imports.py  test_real_api.py  test_real_channels.py  test_run_real_profile.py  test_semantic_router.py  test_serial_multi_ai_router.py  test_session_concurrency.py  test_session_tools.py  test_session_workspace.py  test_windows_workspace_tools.py
tests/psi_agent/: test__socket.py  test__sockets.py  test_app_paths.py  test_call.py  test_cli.py  test_doctor.py  test_fusion_flow_skill_docs.py  test_init.py  test_logging.py  test_protocol.py  test_run.py  test_run_config.py  test_setup.py  test_socket.py  test_sockets.py  test_workspace.py  test_yaml.py
(+986 files in other folders)
