[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "psi-agent"
dynamic = ["version"]
description = "A microkernel-style agent framework"
readme = "README.md"
authors = [{name = "Hao Zhang", email = "hzhangxyz@outlook.com"}]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.14.1",
    "aiohttp>=3.14.1",
    "loguru>=0.7.3",
    "tyro>=1.0.15",
    "croniter>=6.2.2",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "any-llm-sdk>=1.19.0",
    "platformdirs>=4.10.0",
    "lark-channel-sdk>=1.1.0",
    "python-telegram-bot[socks]>=22.8",
    "pystray>=0.19.5",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
all = ["mcp>=1.28.1"]

[dependency-groups]
dev = [
    "mcp>=1.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[project.scripts]
psi-agent = "psi_agent.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "ASYNC", "SIM", "C4", "B", "RUF", "N", "T20", "PLC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra", "--cov"]
markers = ["schedule: schedule-based tests (> 30s)"]

[tool.coverage.run]
source = ["src/psi_agent"]
