[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "psi-agent"
dynamic = ["version"]
description = "A microkernel-style agent framework"
readme = "README.md"
authors = [{name = "Hao Zhang", email = "hzhangxyz@outlook.com"}]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.14.1",
    "aiohttp>=3.14.1",
    "loguru>=0.7.3",
    "tyro>=1.0.15",
    "croniter>=6.2.3",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "any-llm-sdk>=1.19.0",
    "platformdirs>=4.10.0",
    "lark-channel-sdk>=1.1.0",
    "python-telegram-bot[socks]>=22.8",
    "mcp>=1.28.1",
    "serper-mcp-server>=0.0.10",
    "pystray>=0.19.5",
    "pillow>=12.3.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "readability-lxml>=0.8.1",
    "markdownify>=0.13.1",
]

[project.optional-dependencies]
webview = ["pywebview>=5.4"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[project.scripts]
psi-agent = "psi_agent.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
artifacts = ["src/psi_agent/gateway/spa/dist/**/*"]
exclude = ["src/psi_agent/gateway/spa/node_modules/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/psi_agent"]
exclude = [
    "src/psi_agent/**/AGENTS.md",
    "src/psi_agent/**/.gitignore",
    "src/psi_agent/gateway/spa",
]
artifacts = ["src/psi_agent/gateway/spa/dist/**/*"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "ASYNC", "SIM", "C4", "B", "RUF", "N", "T20", "PLC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra", "--cov"]
markers = ["schedule: schedule-based tests (> 30s)"]

[tool.coverage.run]
source = ["src/psi_agent"]

